# ai-design-tells

./: .gitignore  .mcp.json  DESIGN.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
ai_design_tells/: __init__.py  cli.py  scorer.py  scrape.py  server.py
ai_design_tells/data/: spec_catalog.json
ai_design_tells/harness/: AI-DESIGN-TELLS.md
data/: calibration.json  korean_catalog.json  site_list_big.txt  site_list_kr.txt  site_scores.json
data/fixtures_signals/: ai-default.json  designed-docs.json  designed-pricing.json  refined.json  slop-dashboard.json  slop-pricing.json
data/sites/: a16z.com.json  about.gitlab.com.json  activetheory.net.json  airtable.com.json  arc.net.json  asana.com.json  astro.build.json  basement.studio.json  bear.app.json  bere.al.json  bun.sh.json  calendly.com.json  carta.com.json  character.ai.json  clerk.com.json  clickup.com.json  coda.io.json  codesandbox.io.json  cohere.com.json  cursor.com.json  deno.com.json  (+182 more)
fixtures/: ai-default.html  catalog-sample.html  designed-docs.html  designed-pricing.html  refined.html  slop-dashboard.html  slop-pricing.html
harness/: AI-DESIGN-TELLS.md
mcp/: server.py
paper/: paper.typ  refs.bib
reference/: COMPONENT-SPECS.md  KOREAN-SPECS.md
results/: scores.json
scripts/: analyze_corpus.py  audit_url.py  build_korean_catalog.py  build_spec_catalog.py  gen_harness.py  make_figure_field.py  make_figures.py  make_figures_specs.py  make_figures_v2.py  make_gif_sample.py  make_gifs.py  render.sh  render_sample.py  run_audit.py  sync_package_assets.py  validate_signals.py
src/: cli.py  scorer.py  scrape.py  scrape_detail.py  taxonomy.py
tape/: demo.tape
(+252 files in other folders)
