[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-design-tells"
dynamic = ["version"]
description = "A measurable taxonomy of the AI-generated design look: 27 tells, a Tell Score detector, a CLI, and an MCP server."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Han Kim", email = "hankim@iovstudio.kr" }]
keywords = ["design", "ai", "linter", "mcp", "tailwind", "css", "ui", "design-systems", "ai-slop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Quality Assurance",
  "Environment :: Console",
  "Operating System :: OS Independent",
]
# The detector + CLI are pure standard library. The MCP server and live audit are extras.
dependencies = []

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]              # the MCP server (ai-design-tells-mcp)
live = ["playwright>=1.40"]          # audit_url, renders a live page in headless Chrome
all = ["mcp[cli]>=1.2", "playwright>=1.40"]

[project.scripts]
ai-design-tells = "ai_design_tells.cli:main"
ai-design-tells-mcp = "ai_design_tells.server:main"

[project.urls]
Homepage = "https://github.com/hankimis/ai-design-tells"
Repository = "https://github.com/hankimis/ai-design-tells"
Paper = "https://labs.iovstudio.kr/papers/ai-design-tells"

[tool.setuptools.dynamic]
version = { attr = "ai_design_tells.__version__" }

[tool.setuptools.packages.find]
include = ["ai_design_tells*"]

[tool.setuptools.package-data]
ai_design_tells = ["data/*.json", "harness/*.md"]
